UNRELEASED:
- Add button and key shortcut (requires M-Néé) to dump all spells from active wand to storage
- Fix "" spell bugging out the interface

v0.6.0:
- Add setting for closing spell inventory when inventory is opened
- Add some compatibility with Entangled Worlds when dropping spells from inv/storage

v0.5.0:
- Add sorting by spell type
- Removed "Sort" button, sorting now happens instantly on clicking the corresponding sort buttons, left click ascending, right click descending

v0.4.4:
- FIX: Spell uses were restored when dropping spells into world
- FIX: Unlimited spells perk not updating spell charges in storage
- FIX: Picking up a spell recharge with unlimited spells perk would restore the charges in storage to normal
  (this one was just visual since it would get restored to unlimited on equip anyway)
- FIX: Dragging a spell stack from storage onto an existing one in inventory should no longer make an item of the stack disappear

v0.4.3:
- FIX: Items that aren't spells will no longer be auto-stored when the option is on

v0.4.2:
- FIX: Storage was not saved after dropping spells into the world

v0.4.1:
- Add compatibility with different vanilla slot gfx sizes
- Change button graphics

v0.4.0:
- Add setting for refreshing spells in storage when picking up spell refresh
- Add back keybind support with M-Néé
- FIX: Slots would bug after polymorph

v0.3.0:
- Add sounds and setting to turn them off again
- Make quick-move from main to storage prefer stacking over placing them in a free slot
- Add text fields for custom resolution to mod settings in addition to the auto-config button

v0.2.3:
- FIX: Spells could still be dropped with right-click even though window is closed
- Take out M-Néé support for now

v0.2.2:
- FIX: More better compatibility with modded spells

v0.2.1:
- FIX: Spells added by other mods should work better now

v0.2.0:
- Add calibration mod setting for custom screen resolutions

v0.1.2:
- Remove leftover debug prints()

v0.1.1: