@@ -1,6 +1,7 @@
 UNRELEASED:
 - Add button and key shortcut (requires M-Néé) to dump all spells from active wand to storage
 - Fix "" spell bugging out the interface
+- Fix spell uses not being shown correctly
 
 v0.6.0:
 - Add setting for closing spell inventory when inventory is opened
